--- a/splash.html
+++ b/splash.html
@@ -10,10 +10,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="shortcut icon" href="/images/splash.jpg" type="image/x-icon" />
-    <link rel="stylesheet" type="text/css" href="/splash.css" />
+    <link rel="shortcut icon" href="images/splash.jpg" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css" href="splash.css" />
 
-    <title>$gatewayname Hotspot Gateway.</title>
+    <title>LisboaJS</title>
 
     <!--
 Content:
@@ -67,11 +67,11 @@ or appended to the query string of the authtarget link:
 
   <body>
     <div class="offset">
-      <med-blue>$gatewayname Hotspot Gateway.</med-blue>
+      <med-blue>LisboaJS</med-blue>
       <div class="insert">
         <br />
         <img
-          src="/images/splash.jpg"
+          src="images/splash.jpg"
           alt="Splash Page: For access to the Internet, please click Continue."
         />
         <hr />
